# xcopy

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: pbcopy.rs  xpaste.rs
