[package]
name = "xcopy"
version = "0.2.0"
edition = "2021"
categories = ["command-line-utilities"]
keywords = ["clipboard", "pbcopy", "pbpaste"]
description = "X11 copy and paste CLI"
license = "MIT"
repository = "https://github.com/reu/xcopy"

[[bin]]
name = "xcopy"
path = "./src/xcopy.rs"

[[bin]]
name = "xpaste"
path = "./src/xpaste.rs"

[dependencies]
nix = "0.23.1"
x11-clipboard = "0.5.3"
